# django-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cookiecutter.json  docker-compose.dev.yml  docker-compose.yaml  pyproject.toml  tasks.py
.github/workflows/: commit.yaml
scripts/: entrypoint.sh  production_data.py  setup_environment.py
src/: conftest.py
src/config/settings/: __init__.py  base.py  logging.py  settings.base.py  settings.docker.py  settings.environment.py
src/config/settings/templates/: settings.dev.py  settings.github.py  settings.prod.py  settings.testing.py  settings.unittest.py
src/general/utils/: environment.py  misc.py
{{cookiecutter.project_name}}/: .gitignore  Makefile  docker-compose.dev.yaml  pyproject.toml
{{cookiecutter.project_name}}/src/: conftest.py
{{cookiecutter.project_name}}/src/config/settings/: __init__.py  base.py
{{cookiecutter.project_name}}/src/config/settings/templates/: settings.dev.py  settings.github.py  settings.prod.py  settings.testing.py
