[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = "Django boiler plate for varios projects"
authors = ["egorgurtyakin@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# Main framework
# -------------------------------------------------
# Use packages from https://djangopackages.org/ !!! Do not reinvent the wheel!
# -------------------------------------------------
# https://www.djangoproject.com/
django = "^5.1.1"
# Filter querysets dynamically
# https://django-filter.readthedocs.io/en/stable/
django-filter = "^24.3"
django-split-settings = "^1.3.2"
# This project checks for various conditions and provides reports when anomalous behavior is detected.
# https://github.com/KristianOellegaard/django-health-check
django-health-check = "^3.18.3"
# AWS S3 cloud storage
# https://django-storages.readthedocs.io/en/1.14.4/backends/amazon-S3.html
django-storages = { extras = ["s3"], version = "^1.14.4" }
# Postgres database abstaction
psycopg2 = "^2.9.9"

# DRF packages
# Django REST Framework
djangorestframework = "^3.15.2"
# Secure token-based auth for drf
# https://jazzband.github.io/django-rest-knox/,
django-rest-knox = "^5.0.1"


pyyaml = "^6.0.2"

[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py312"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
ipdb = "^0.13.13"
ipython = "^8.27.0"
django-debug-toolbar = "^4.4.6"
colorlog = "^6.8.2"


[tool.poetry.group.local.dependencies]
pre-commit = "^3.8.0"


[tool.poetry.group.test.dependencies]
# Pytest testing framework
pytest = "^8.3.2"
# Allow test to run in parallel threads
pytest-xdist = "^3.6.1"
# Prettier tests output
pytest-sugar = "^1.0.0"
# Integrate pytest in Django
pytest-django = "^4.9.0"
# Easy and fast django models for testing
model-bakery = "^1.19.5"

[tool.pytest.ini_options]
pythonpath = "."
DJANGO_SETTINGS_MODULE = "src.config.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["src"]
#filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:" if deprecation warns are annoying

[tool.poetry.group.commit-style.dependencies]
gitlint = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.ruff.lint]
extend-select = [
    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    # "N",
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I",
]
ignore = [
    # https://docs.astral.sh/ruff/rules/missing-type-self
    "ANN101",
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    # https://docs.astral.sh/ruff/rules/unused-import
    "F401",
    # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/
    "F403",
]
"conftest.py" = [
    # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/
    "F403",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "list"
parametrize-values-type = "list"
parametrize-values-row-type = "list"

[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true
section-order = [
    "future",
    "standard-library",
    "django",
    "drf",
    "third-party",
    "first-party",
    "apps",
    "local-folder",
]
[tool.ruff.lint.isort.sections]
django = ["django"]
drf = ["rest_framework"]
apps = ["apps", "config", "libs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
exclude = [
    # Disabling for admin since it's just configs and black/ruff format one item
    # tuples as one line
    "**/admin.py",
    "**/views.py",
    "**/admin/*",
    "**/views/*",
]
